--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,7 +21,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     width: 99%;
-    height: 45px;
+    height: 60px;
     text-align: right;
     font-size: 35px;
     background-color:floralwhite;
@@ -31,12 +31,14 @@
     border-radius: 15px;
 }
 .input p {
+    padding-top: 10px;
     padding-right: 10px;
     color: black;
     font-weight: 100;
+
 }
 button {
-    height: 50px;
+    height: 75px;
     font-size: 30px;
     color: white;
     text-align: center;
